apps/frp/kubernetes/frpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frpc
  namespace: ${NAMESPACE}
  labels:
    app: frpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frpc
  template:
    metadata:
      labels:
        app: frpc
    spec:
      containers:
      - name: frpc
        image: snowdreamtech/frpc:0.51.3
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/frp/frpc.ini
          subPath: frpc.ini
        - name: logs
          mountPath: /var/log
        resources:
          limits:
            cpu: 150m
            memory: 192Mi
          requests:
            cpu: 75m
            memory: 96Mi
      volumes:
      - name: config
        configMap:
          name: frpc-config
      - name: logs
        persistentVolumeClaim:
          claimName: frpc-logs
