apps/frp/kubernetes/frps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frps
  namespace: ${NAMESPACE}
  labels:
    app: frps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frps
  template:
    metadata:
      labels:
        app: frps
    spec:
      containers:
      - name: frps
        image: snowdreamtech/frps:0.51.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
          name: frps
        - containerPort: 7500
          name: dashboard
        volumeMounts:
        - name: config
          mountPath: /etc/frp/frps.ini
          subPath: frps.ini
        - name: logs
          mountPath: /var/log
        resources:
          limits:
            cpu: 300m
            memory: 384Mi
          requests:
            cpu: 150m
            memory: 192Mi
      volumes:
      - name: config
        configMap:
          name: frps-config
      - name: logs
        persistentVolumeClaim:
          claimName: frps-logs
---
apiVersion: v1
kind: Service
metadata:
  name: frps
  namespace: ${NAMESPACE}
spec:
  selector:
    app: frps
  ports:
  - name: frps
    port: 7000
    targetPort: 7000
  - name: dashboard
    port: 7500
    targetPort: 7500
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frps-dashboard
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  rules:
  - host: ${FRPS_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frps
            port:
              number: 7500
